RenderPipeline Updates, Transparent Pass, MultiThreading Sorting
- Louron Core -

Rehauled render pipeline workflow to utilise multithreading for sorting tasks.

Implemented transparency pass for materials that are transparent. Depth writing and cull face is disabled during this pass.

Asset Manager Import Asset function changed to allow custom handle to be provided opposed to generating internally.

Framebuffer can now provide texture IDs for multisampled attachments.

- Louron Editor -

Played around with more shaders and materials!

Implemented use of template files opposed to inline code for CS scripts and Compute Shaders.

Fixed many issues in the main shader program. Things like non-orthographic TBN's and other lighting tid bits.

Added more options for file creation in content browser panel.

--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -14,8 +14,8 @@ Size=1384,711
 Collapsed=0
 
 [Window][Scene]
-Pos=264,19
-Size=909,657
+Pos=281,19
+Size=1019,540
 Collapsed=0
 DockId=0x00000005,0
 
@@ -25,7 +25,7 @@ Size=568,748
 Collapsed=0
 
 [Window][Asset Registry]
-Pos=1199,-67
+Pos=1285,19
 Size=315,881
 Collapsed=0
 DockId=0x0000000C,0
@@ -45,8 +45,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=1175,678
-Size=425,222
+Pos=1037,561
+Size=563,339
 Collapsed=0
 DockId=0x00000008,0
 
@@ -58,15 +58,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=262,657
+Size=279,540
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1175,19
-Size=425,324
+Pos=1302,19
+Size=298,540
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000006,0
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -108,8 +108,8 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,678
-Size=1173,222
+Pos=0,561
+Size=1035,339
 Collapsed=0
 DockId=0x00000007,1
 
@@ -125,15 +125,15 @@ Size=400,125
 Collapsed=0
 
 [Window][New Scene]
-Pos=514,314
-Size=400,100
+Pos=1290,634
+Size=860,100
 Collapsed=0
 
 [Window][Project Properties]
-Pos=3015,19
-Size=425,593
+Pos=1175,19
+Size=425,400
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000006,1
 
 [Window][Scene Properties]
 Pos=1626,824
@@ -182,8 +182,8 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,678
-Size=1173,222
+Pos=0,561
+Size=1035,339
 Collapsed=0
 DockId=0x00000007,0
 
@@ -307,10 +307,10 @@ Size=792,234
 Collapsed=0
 
 [Window][Material Properties Panel]
-Pos=1175,345
-Size=425,331
+Pos=1302,19
+Size=298,540
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000006,1
 
 [Table][0xAC9A836A,2]
 RefScale=13
@@ -458,20 +458,18 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xBCD3763F Window=0xF829B4E6 Pos=86,128 Size=1600,881 Split=X
-  DockNode            ID=0x0000000B Parent=0xBCD3763F SizeRef=1283,881 Split=Y
-    DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=1920,657 Split=X
-      DockNode        ID=0x00000003 Parent=0x0000000D SizeRef=262,881 Selected=0x2E9237F7
-      DockNode        ID=0x00000004 Parent=0x0000000D SizeRef=1336,881 Split=Y
-        DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
-        DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
-          DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=909,668 CentralNode=1 Selected=0xE192E354
-          DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=425,668 Split=Y Selected=0xB5796446
-            DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=621,324 Selected=0xB5796446
-            DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=621,331 Selected=0x4487EE04
-    DockNode          ID=0x0000000E Parent=0x0000000B SizeRef=1920,222 Split=X Selected=0x81AED595
-      DockNode        ID=0x00000007 Parent=0x0000000E SizeRef=1173,311 Selected=0xBF096F38
-      DockNode        ID=0x00000008 Parent=0x0000000E SizeRef=425,311 Selected=0x1E6EB881
-  DockNode            ID=0x0000000C Parent=0xBCD3763F SizeRef=315,881 Selected=0xD02A5577
+DockSpace           ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=41,89 Size=1600,881 Split=X
+  DockNode          ID=0x0000000B Parent=0xBCD3763F SizeRef=1283,881 Split=Y
+    DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=1920,540 Split=X
+      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=279,881 Selected=0x2E9237F7
+      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=1319,881 Split=Y
+        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
+        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
+          DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1019,668 CentralNode=1 Selected=0xE192E354
+          DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=298,668 Selected=0xB5796446
+    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=1920,339 Split=X Selected=0x81AED595
+      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=1035,339 Selected=0x81AED595
+      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=563,339 Selected=0x1E6EB881
+  DockNode          ID=0x0000000C Parent=0xBCD3763F SizeRef=315,881 Selected=0xD02A5577
 
