Rigidbody Constraints & Lil Tid Bits
- Louron Core -

Implemented applying constraints to rigidbodies.

Change default camera clear colour.

Made some small fixes to the rendering pipeline.

- Louron Editor -

Implemented logic for rigidbody constraint changes in editor.

FPS counter is now 4 times per second oppsoed to every frame.

Reset the editor camera whenever a new project or new scene is opened.

Also reset the file watcher for content browser when opening another project.

--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -14,10 +14,10 @@ Size=1384,711
 Collapsed=0
 
 [Window][Scene]
-Pos=281,19
-Size=1019,540
+Pos=280,19
+Size=1020,540
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
 Pos=662,68
@@ -45,10 +45,10 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=1037,561
-Size=563,339
+Pos=1304,561
+Size=296,339
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000A,0
 
 [Window][Dear ImGui Style Editor]
 ViewportPos=2044,295
@@ -58,15 +58,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=279,540
+Size=278,540
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][Properties Panel]
 Pos=1302,19
 Size=298,540
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000004,0
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -109,9 +109,9 @@ Collapsed=0
 
 [Window][Render]
 Pos=0,561
-Size=1035,339
+Size=1302,339
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000009,1
 
 [Window][TopBar]
 Pos=0,19
@@ -133,7 +133,7 @@ Collapsed=0
 Pos=1175,19
 Size=425,400
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000004,1
 
 [Window][Scene Properties]
 Pos=1626,824
@@ -183,9 +183,9 @@ Collapsed=0
 
 [Window][Content Browser]
 Pos=0,561
-Size=1035,339
+Size=1302,339
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000009,0
 
 [Window][Check Delete?]
 Pos=777,411
@@ -310,7 +310,11 @@ Collapsed=0
 Pos=1302,19
 Size=298,540
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000004,1
+
+[Window][Scene Control Bar]
+Size=1600,40
+Collapsed=0
 
 [Table][0xAC9A836A,2]
 RefScale=13
@@ -459,17 +463,17 @@ Column 3  Weight=1.0000
 
 [Docking][Data]
 DockSpace           ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=41,89 Size=1600,881 Split=X
-  DockNode          ID=0x0000000B Parent=0xBCD3763F SizeRef=1283,881 Split=Y
-    DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=1920,540 Split=X
-      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=279,881 Selected=0x2E9237F7
-      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=1319,881 Split=Y
-        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
-        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
-          DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1019,668 CentralNode=1 Selected=0xE192E354
-          DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=298,668 Selected=0xB5796446
-    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=1920,339 Split=X Selected=0x81AED595
-      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=1035,339 Selected=0x81AED595
-      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=563,339 Selected=0x1E6EB881
-  DockNode          ID=0x0000000C Parent=0xBCD3763F SizeRef=315,881 Selected=0xD02A5577
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=34,76 Size=1600,881 Split=Y
+  DockNode          ID=0x00000008 Parent=0xBCD3763F SizeRef=1600,540 Split=X
+    DockNode        ID=0x00000005 Parent=0x00000008 SizeRef=278,881 Selected=0x2E9237F7
+    DockNode        ID=0x00000006 Parent=0x00000008 SizeRef=1320,881 Split=X
+      DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=1300,881 Split=X
+        DockNode    ID=0x0000000B Parent=0x00000003 SizeRef=1283,881 Split=Y
+          DockNode  ID=0x00000001 Parent=0x0000000B SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
+          DockNode  ID=0x00000002 Parent=0x0000000B SizeRef=0,58 CentralNode=1 Selected=0xE192E354
+        DockNode    ID=0x0000000C Parent=0x00000003 SizeRef=315,881 Selected=0xD02A5577
+      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=298,881 Selected=0x4487EE04
+  DockNode          ID=0x00000007 Parent=0xBCD3763F SizeRef=1600,339 Split=X Selected=0x81AED595
+    DockNode        ID=0x00000009 Parent=0x00000007 SizeRef=1302,339 Selected=0x81AED595
+    DockNode        ID=0x0000000A Parent=0x00000007 SizeRef=296,339 Selected=0x1E6EB881
 
