--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=280,19
-Size=1020,540
+Size=938,629
 Collapsed=0
 DockId=0x00000002,0
 
@@ -45,8 +45,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=1304,561
-Size=296,339
+Pos=1130,650
+Size=470,250
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -58,13 +58,13 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=278,540
+Size=278,629
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties Panel]
-Pos=1302,19
-Size=298,540
+Pos=1220,19
+Size=380,629
 Collapsed=0
 DockId=0x00000004,0
 
@@ -108,8 +108,8 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,561
-Size=1302,339
+Pos=0,650
+Size=1128,250
 Collapsed=0
 DockId=0x00000009,1
 
@@ -125,15 +125,15 @@ Size=400,125
 Collapsed=0
 
 [Window][New Scene]
-Pos=1290,634
-Size=860,100
+Pos=600,400
+Size=400,100
 Collapsed=0
 
 [Window][Project Properties]
-Pos=1175,19
-Size=425,400
+Pos=1220,19
+Size=380,629
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000004,2
 
 [Window][Scene Properties]
 Pos=1626,824
@@ -182,8 +182,8 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,561
-Size=1302,339
+Pos=0,650
+Size=1128,250
 Collapsed=0
 DockId=0x00000009,0
 
@@ -307,8 +307,8 @@ Size=792,234
 Collapsed=0
 
 [Window][Material Properties Panel]
-Pos=1302,19
-Size=298,540
+Pos=1220,19
+Size=380,629
 Collapsed=0
 DockId=0x00000004,1
 
@@ -463,17 +463,17 @@ Column 3  Weight=1.0000
 
 [Docking][Data]
 DockSpace           ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=34,76 Size=1600,881 Split=Y
-  DockNode          ID=0x00000008 Parent=0xBCD3763F SizeRef=1600,540 Split=X
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=346,388 Size=1600,881 Split=Y
+  DockNode          ID=0x00000008 Parent=0xBCD3763F SizeRef=1600,629 Split=X
     DockNode        ID=0x00000005 Parent=0x00000008 SizeRef=278,881 Selected=0x2E9237F7
     DockNode        ID=0x00000006 Parent=0x00000008 SizeRef=1320,881 Split=X
-      DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=1300,881 Split=X
+      DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=938,881 Split=X
         DockNode    ID=0x0000000B Parent=0x00000003 SizeRef=1283,881 Split=Y
           DockNode  ID=0x00000001 Parent=0x0000000B SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
           DockNode  ID=0x00000002 Parent=0x0000000B SizeRef=0,58 CentralNode=1 Selected=0xE192E354
         DockNode    ID=0x0000000C Parent=0x00000003 SizeRef=315,881 Selected=0xD02A5577
-      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=298,881 Selected=0x4487EE04
-  DockNode          ID=0x00000007 Parent=0xBCD3763F SizeRef=1600,339 Split=X Selected=0x81AED595
-    DockNode        ID=0x00000009 Parent=0x00000007 SizeRef=1302,339 Selected=0x81AED595
-    DockNode        ID=0x0000000A Parent=0x00000007 SizeRef=296,339 Selected=0x1E6EB881
+      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=380,881 Selected=0x2A660BC6
+  DockNode          ID=0x00000007 Parent=0xBCD3763F SizeRef=1600,250 Split=X Selected=0x81AED595
+    DockNode        ID=0x00000009 Parent=0x00000007 SizeRef=1128,339 Selected=0x81AED595
+    DockNode        ID=0x0000000A Parent=0x00000007 SizeRef=470,339 Selected=0x1E6EB881
 
