--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -25,8 +25,8 @@ Size=568,748
 Collapsed=0
 
 [Window][Asset Registry]
-Pos=1285,19
-Size=315,881
+Pos=887,19
+Size=315,629
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -45,8 +45,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=1130,650
-Size=470,250
+Pos=1055,650
+Size=545,250
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -109,7 +109,7 @@ Collapsed=0
 
 [Window][Render]
 Pos=0,650
-Size=1128,250
+Size=1053,250
 Collapsed=0
 DockId=0x00000009,1
 
@@ -152,8 +152,8 @@ Size=300,100
 Collapsed=0
 
 [Window][Script Error]
-Pos=3524,715
-Size=480,50
+Pos=600,425
+Size=400,50
 Collapsed=0
 
 [Window][Select Entity]
@@ -183,7 +183,7 @@ Collapsed=0
 
 [Window][Content Browser]
 Pos=0,650
-Size=1128,250
+Size=1053,250
 Collapsed=0
 DockId=0x00000009,0
 
@@ -463,7 +463,7 @@ Column 3  Weight=1.0000
 
 [Docking][Data]
 DockSpace           ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=112,154 Size=1600,881 Split=Y
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=34,76 Size=1600,881 Split=Y
   DockNode          ID=0x00000008 Parent=0xBCD3763F SizeRef=1600,629 Split=X
     DockNode        ID=0x00000005 Parent=0x00000008 SizeRef=278,881 Selected=0x2E9237F7
     DockNode        ID=0x00000006 Parent=0x00000008 SizeRef=1320,881 Split=X
@@ -472,8 +472,8 @@ DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=112,154 Size=1600,881 Sp
           DockNode  ID=0x00000001 Parent=0x0000000B SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
           DockNode  ID=0x00000002 Parent=0x0000000B SizeRef=0,58 CentralNode=1 Selected=0xE192E354
         DockNode    ID=0x0000000C Parent=0x00000003 SizeRef=315,881 Selected=0xD02A5577
-      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=396,881 Selected=0x4487EE04
+      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=396,881 Selected=0xB5796446
   DockNode          ID=0x00000007 Parent=0xBCD3763F SizeRef=1600,250 Split=X Selected=0x81AED595
-    DockNode        ID=0x00000009 Parent=0x00000007 SizeRef=1128,339 Selected=0xBF096F38
-    DockNode        ID=0x0000000A Parent=0x00000007 SizeRef=470,339 Selected=0x1E6EB881
+    DockNode        ID=0x00000009 Parent=0x00000007 SizeRef=1053,339 Selected=0x81AED595
+    DockNode        ID=0x0000000A Parent=0x00000007 SizeRef=545,339 Selected=0x1E6EB881
 
