--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=280,19
-Size=922,629
+Size=922,518
 Collapsed=0
 DockId=0x00000002,0
 
@@ -45,8 +45,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=1055,650
-Size=545,250
+Pos=1055,539
+Size=545,361
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -58,13 +58,13 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=278,629
+Size=278,518
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties Panel]
 Pos=1204,19
-Size=396,629
+Size=396,518
 Collapsed=0
 DockId=0x00000004,0
 
@@ -108,8 +108,8 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,650
-Size=1053,250
+Pos=0,539
+Size=1053,361
 Collapsed=0
 DockId=0x00000009,1
 
@@ -182,8 +182,8 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,650
-Size=1053,250
+Pos=0,539
+Size=1053,361
 Collapsed=0
 DockId=0x00000009,0
 
@@ -308,7 +308,7 @@ Collapsed=0
 
 [Window][Material Properties Panel]
 Pos=1204,19
-Size=396,629
+Size=396,518
 Collapsed=0
 DockId=0x00000004,1
 
@@ -463,8 +463,8 @@ Column 3  Weight=1.0000
 
 [Docking][Data]
 DockSpace           ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=34,76 Size=1600,881 Split=Y
-  DockNode          ID=0x00000008 Parent=0xBCD3763F SizeRef=1600,629 Split=X
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=320,362 Size=1600,881 Split=Y
+  DockNode          ID=0x00000008 Parent=0xBCD3763F SizeRef=1600,518 Split=X
     DockNode        ID=0x00000005 Parent=0x00000008 SizeRef=278,881 Selected=0x2E9237F7
     DockNode        ID=0x00000006 Parent=0x00000008 SizeRef=1320,881 Split=X
       DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=922,881 Split=X
@@ -473,7 +473,7 @@ DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=34,76 Size=1600,881 Spli
           DockNode  ID=0x00000002 Parent=0x0000000B SizeRef=0,58 CentralNode=1 Selected=0xE192E354
         DockNode    ID=0x0000000C Parent=0x00000003 SizeRef=315,881 Selected=0xD02A5577
       DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=396,881 Selected=0xB5796446
-  DockNode          ID=0x00000007 Parent=0xBCD3763F SizeRef=1600,250 Split=X Selected=0x81AED595
-    DockNode        ID=0x00000009 Parent=0x00000007 SizeRef=1053,339 Selected=0x81AED595
+  DockNode          ID=0x00000007 Parent=0xBCD3763F SizeRef=1600,361 Split=X Selected=0x81AED595
+    DockNode        ID=0x00000009 Parent=0x00000007 SizeRef=1053,339 Selected=0xBF096F38
     DockNode        ID=0x0000000A Parent=0x00000007 SizeRef=545,339 Selected=0x1E6EB881
 
